--- a/css/main.css
+++ b/css/main.css
@@ -408,7 +408,7 @@ body.main__page {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.507);
 }
 
-/* Кнопка закрытия для мобильной версии */
+
 .mobile-close-btn {
     display  : none;
     position : absolute;
@@ -439,7 +439,7 @@ body.main__page {
 
 .hero {
     min-height     : 800px;
-    margin-top     : 150px;
+    margin-top     : 200px;
     display        : flex;
     justify-content: center;
     align-items    : center;
@@ -862,39 +862,168 @@ body.main__page {
 
 
 
-.production{
-    padding: 50px 0;
+.production {
+    padding   : 50px 0;
     background: #404040;
+    margin    : 20px 0;
 }
-.production__container ul{
-    display: flex;
+
+.production__container ul {
+    display        : flex;
     justify-content: space-between;
+    align-items    : center;
 }
-.production__items div{
-    display: flex;
+
+.production__items div {
+    display    : flex;
     align-items: center;
-    gap: 25px;
-    margin-top: 35px;
+    gap        : 25px;
+    margin-top : 35px;
 }
-.production__img{
-    max-width: 231px;
-    height: 74px;
-    background: #FFFFFF;
+
+.production__img {
+    max-width    : 231px;
+    height       : 74px;
+    background   : #FFFFFF;
     border-radius: 30px;
 }
-.production__items p{
-    font-family: Montserrat;
-font-weight: 400;
-font-style: Regular;
-font-size: 14px;
-line-height: 100%;
-letter-spacing: 0%;
 
+.production__items p {
+    font-family   : Montserrat;
+    font-weight   : 400;
+    font-style    : Regular;
+    font-size     : 14px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    color         : #FFFFFF;
+    max-width     : 238px;
 
+}
+
+iframe {
+    width : 687px;
+    height: 385px;
 }
 
 
 
+
+
+
+
+
+
+
+.work__container li {
+    display        : flex;
+    gap            : 15px;
+    flex-wrap      : wrap;
+    justify-content: center;
+}
+
+.work__image {
+    box-shadow: rgb(240, 205, 109);
+}
+
+.work__list .work__image {
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    flex-direction : column;
+    text-align     : center;
+    height         : 274px;
+    width          : 330px;
+    border-radius  : 10px;
+    color          : white;
+    cursor         : pointer;
+    transition     : 400ms;
+}
+
+.work__list .work__image p.tip {
+    font-size  : 1em;
+    font-weight: 700;
+}
+
+.work__list .work__image p.second-text {
+    font-size: .7em;
+}
+
+.work__list .work__image:hover {
+    transform: scale(1.1, 1.1);
+}
+
+.work__list:hover>.work__image:not(:hover) {
+    filter   : blur(10px);
+    transform: scale(0.9, 0.9);
+}
+
+.work__container p {
+    font-family   : Montserrat;
+    font-weight   : 400;
+    font-style    : Regular;
+    font-size     : 12px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    text-align    : center;
+    color         : #000000;
+    margin-bottom : 30px;
+    text-align    : center;
+}
+
+.property {
+    padding   : 50px 0;
+    background: #404040;
+    margin    : 20px 0;
+}
+
+.property__list {
+    display        : flex;
+    justify-content: space-between;
+    align-items    : center;
+    flex-wrap      : wrap;
+    gap            : 25px;
+}
+
+.property__items {
+    background   : #FFFFFF;
+    width        : 330px;
+    height       : 323px;
+    border-radius: 30px;
+    padding      : 30px;
+    box-shadow   : 4px 4px 20px 0px #00000040;
+}
+.property__items:hover{
+    box-shadow   : 4px 4px 20px 0px #c46c0841;
+    border: 1px solid #4d1c1c;
+}
+
+.property__items img {
+    max-width: 90px;
+    height   : 90px;
+    display  : block;
+    margin   : 0 auto;
+}
+
+.property__items h5 {
+    font-family   : Montserrat;
+    font-weight   : 700;
+    font-style    : Bold;
+    font-size     : 14px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    color         : #000000;
+    margin        : 25px 0;
+}
+
+.property__items p {
+    font-family   : Montserrat;
+    font-weight   : 400;
+    font-style    : Regular;
+    font-size     : 12px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+
+}
 
 
 
@@ -1121,4 +1250,89 @@ letter-spacing: 0%;
         color                     : #fff;
     }
 
+    .production__container ul {
+        display        : flex;
+        flex-direction : column;
+        text-align     : center;
+        justify-content: space-between;
+        align-items    : center;
+
+    }
+
+    iframe {
+        margin-top: 25px;
+        max-width : 385px;
+        height    : 350px;
+    }
+
+    .work__list .work__image {
+        display        : flex;
+        flex-wrap      : wrap;
+        align-items    : center;
+        justify-content: center;
+        text-align     : center;
+        border-radius  : 10px;
+        color          : white;
+        cursor         : pointer;
+        transition     : 400ms;
+        height         : 174px;
+        width          : 200px;
+    }
+
+    .work__image img {
+        height: 174px;
+        width : 200px;
+    }
+
+    .work__container li {
+        display        : flex;
+        gap            : 15px;
+        flex-wrap      : wrap;
+        justify-content: center;
+    }
+
+
+    .property__list {
+        display        : flex;
+        justify-content: center;
+        align-items    : center;
+        flex-wrap      : wrap;
+        gap            : 15px;
+    }
+
+    .property__items {
+        background   : #FFFFFF;
+        width        : 200px;
+        height       : 203px;
+        border-radius: 30px;
+        padding      : 30px;
+        box-shadow   : 4px 4px 20px 0px #00000040;
+    }
+
+    .property__items img {
+        max-width: 50px;
+        height   : 50px;
+        display  : block;
+        margin   : 0 auto;
+    }
+
+    .property__items h5 {
+        font-family   : Montserrat;
+        font-weight   : 700;
+        font-style    : Bold;
+        font-size     : 8px;
+        line-height   : 100%;
+        letter-spacing: 0%;
+        color         : #000000;
+        margin        : 25px 0;
+    }
+
+    .property__items p {
+        font-family   : Montserrat;
+        font-weight   : 400;
+        font-style    : Regular;
+        font-size     : 8px;
+        line-height   : 100%;
+        letter-spacing: 0%;
+    }
 }
