--- a/css/main.css
+++ b/css/main.css
@@ -357,7 +357,7 @@ body.main__page {
 
 .navigation {
     background-color: #fff;
-    padding         : 15px 0;
+    padding         : 1px 0;
     position        : relative;
 }
 
@@ -1132,7 +1132,7 @@ iframe {
 
 
 
-
+/* telefon va tabletga tushadigan versiya */
 @media (max-width: 768px) {
     .icons__row {
         display        : flex;
